# niobiomoneywallet

./: .gitignore  .gitmodules  .gitprefix  CMakeLists.txt  README.md  ReleaseNotes.txt
macros/: node.cmake  qrencode.cmake  settings.cmake
src/: AddressProvider.cpp  AddressProvider.h  CommandLineParser.cpp  DnsLookup.cpp  DnsLookup.h  Languages.pro  LoggerAdapter.cpp  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  PaymentServer.cpp  PaymentServer.h  Settings.cpp  Settings.h  TranslatorManager.cpp  Update.cpp  Update.h  WalletAdapter.cpp  WalletAdapter.h  WalletNodes.cpp  cryptonotewallet.rc  default.qss  main.cpp  niobiocashwallet.desktop  quanwallet.desktop  resources.qrc
src/gui/: AccountFrame.cpp  ChangeLanguageDialog.cpp  ChangeLanguageDialog.h  ConfirmSendDialog.cpp  ConnectionSettings.cpp  ConnectionSettings.h  MainWindow.cpp  MainWindow.h  OpenUriDialog.cpp  OverviewFrame.cpp  OverviewFrame.h  PrivateKeysDialog.cpp  PrivateKeysDialog.h  ReceiveFrame.cpp  SendFrame.cpp  SendGlassFrame.cpp  TransactionDetailsDialog.cpp  TransactionsFrame.cpp  TransactionsModel.cpp  TransferFrame.cpp
src/gui/ui/: aboutdialog.ui  accountframe.ui  changelanguagedialog.ui  confirmsenddialog.ui  connectionsettingsdialog.ui  exitwidget.ui  mainwindow.ui  overviewframe.ui  receiveframe.ui  sendframe.ui  transferframe.ui
src/images/: logo2.icns  q1v-wallet.icns  splash.xcf
src/languages/: es.ts  pt.ts
src/mnemonics/: electrum-words.cpp  portuguese.h
